[package]
name = "get_aws_secrets"
version = "0.1.8"
edition = "2021"
authors = ["Khader Syed <me@khadersyed.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
aws-config = "0.54.1"
aws-sdk-secretsmanager = "0.24.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# reqwest = {version = "0.11.14", features = ["json"]}
